# data-analyst-OpenEnv

./: Dockerfile  README.md  inference.py  openenv.yaml  pyproject.toml  requirements.txt
app/: datasets.py  environment.py  graders.py  main.py  models.py
