[project]
name = "data-analyst-env-agent"
version = "0.1.0"
description = "OpenEnv Data Analyst RL Agent"
authors = [
    { name = "Shreyas" },
    { name = "Danish" },
    { name = "Mohammed Zabiulla" }
]
requires-python = ">=3.9"

dependencies = [
    "fastapi==0.111.0",
    "uvicorn[standard]==0.29.0",
    "pydantic==2.7.1",
    "pandas==2.2.2",
    "numpy==1.26.4",
    "scikit-learn==1.4.2",
    "requests==2.31.0",
    "openai==1.30.1",
    "python-multipart==0.0.9"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"